tableau elve ok

--- a/src/main/webapp/i18n/fr/critereRecherche.json
+++ b/src/main/webapp/i18n/fr/critereRecherche.json
@@ -8,6 +8,13 @@
             "ldapEpp":"EPP",
             "resume":"Résumé",
             "ldapAaf":"AAF",
+            "ldapSiecle":"SIECLE",
+            "ldapAten":"ATEN",
+            "ldapEduConnect":"EduConnect",
+            "ldapSirhen":"SIRHEN ACA",
+            "ldapEppPrive":" EPP privé",
+            "ldapAcademique":"Annuaire Académique",
+            "ldapAgora":"Agora",
            "profil":"Profil",
            "nom":"Nom",
            "prenom":"Prénom",
