personjson presk ok

--- a/src/main/webapp/i18n/fr/personnel.json
+++ b/src/main/webapp/i18n/fr/personnel.json
@@ -30,7 +30,7 @@
             "etablissement":"Établissement",
             "fonction":"Fonction",
             "ville":"Ville",
-            "discipline":"discipline",
+            "discipline":"Discipline",
             "baseGestion":"Base de gestion"
             },
             "tableauAgora":{
@@ -39,7 +39,7 @@
             "birthday":"Date de naissance",
             "position":"Position",
             "libelle":"Libellé"
-            }        
+            }
         }
          
     }
