affichage tabeau user ok

--- a/src/main/webapp/i18n/fr/eleve.json
+++ b/src/main/webapp/i18n/fr/eleve.json
@@ -41,7 +41,8 @@
             "birthday":"Date de naissance",
             "etablissement":"Établissement",
             "responsable":"Responsables Légaux"
-           }
+           },
+           "detail":"Détail"
 
 
         }
