--- a/src/main/webapp/i18n/fr/personnel.json
+++ b/src/main/webapp/i18n/fr/personnel.json
@@ -45,7 +45,8 @@
             },
             "tableauAnnuaireTouta":{
             
-            }
+            },
+            "detail":"Détail"
             
         }
          
