remplissage donné pres ok

--- a/src/main/webapp/i18n/fr/personnel.json
+++ b/src/main/webapp/i18n/fr/personnel.json
@@ -13,14 +13,23 @@
             "prenom":"Prénom",
             "birthday":"Date de naissance",
             "position":"Position",
-            "libelle":"Libellé"
+            "libelle":"Libellé",
+            "infoComp":"Informations complementaires",
+            "grade":"Grade",
+             "numen":"Numen",
+             "fonction":"Fonction"
             },
             "tableauEppPrive":{
             "nom":"​Nom",
             "prenom":"Prénom",
             "birthday":"Date de naissance",
             "position":"Position",
-             "libelle":"Libellé"
+             "libelle":"Libellé",
+             "infoComp":"Informations complementaires",
+             "grade":"Grade",
+             "numen":"Numen"
+
+
             },
             "tableauAaf":{
             "nom":"​Nom",
@@ -38,7 +47,8 @@
                 "prenom":"Prénom",
                 "birthday":"Date de naissance",
                 "position":"Position",
-                "libelle":"Libellé"
+                "libelle":"Libellé",
+                "infoComp":"Informations complementaires"
             },
             "tableauAnnuaireACA":{
 
