--- a/src/main/webapp/i18n/fr/personnel.json
+++ b/src/main/webapp/i18n/fr/personnel.json
@@ -1,63 +1,139 @@
 {
     "outilDiagnostic": {
         "personnel": {
-            "tableauSirhen": {
-            "nom":"​Nom",
-            "prenom":"Prénom",
-            "birthday":"Date de naissance",
-            "position":"Position",
-            "libelle":"Libellé"
-            },
-            "tableauEpp":{
-            "nom":"​Nom",
-            "prenom":"Prénom",
-            "birthday":"Date de naissance",
-            "position":"Position",
-            "libelle":"Libellé",
-            "infoComp":"Informations complementaires",
-            "grade":"Grade",
-             "numen":"Numen",
-             "fonction":"Fonction"
-            },
-            "tableauEppPrive":{
-            "nom":"​Nom",
-            "prenom":"Prénom",
-            "birthday":"Date de naissance",
-            "position":"Position",
-             "libelle":"Libellé",
-             "infoComp":"Informations complementaires",
-             "grade":"Grade",
-             "numen":"Numen"
+            "ACA": {
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "0.9.2342.19200300.100.1.1": "Identifiant",
+                    "position":"Position",
+                    "libelle":"Libellé"
+    
+                },
+                "detaille":
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.5.4.3":"Nom commun",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
+                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                    "2.5.4.49":"Identifiant entrée",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+                    "2.5.4.12":"Titre"
 
+               } 
+            }
+        ,
+        "TOUTATICE": {
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
+                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "position":"Position",
+                    "libelle":"Libellé",
+                    "infoComp":"Informations complementaires",
+                    "grade":"Grade",
+                    "numen":"Numen",
+                    "fonction":"Fonction"
+                },
+                "detaille":
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
+                    "2.5.4.3":"Nom commun",
+                    "2.5.4.49":"Identifiant entrée",
+                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                    "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.5.4.12":"Titre"
 
+    
+               }
+            
+           },
+        
+            
+           "tableauEppPrive":{
+             
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "position":"Position",
+                    "libelle":"Libellé",
+                    "infoComp":"Informations complementaires",
+                    "grade":"Grade",
+                    "numen":"Numen"
+                 },
+                 "detaille":
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements"
+    
+               }
+            }
+        ,
+        "tableauAaf": {
+             "resume": 
+              {
+                "2.5.4.4":"​Nom",
+                "2.5.6.1":"Prénom",
+                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                "identifiant":"Identifiant",
+                "etablissement":"Établissement",
+                "fonction":"Fonction",
+                "ville":"Ville",
+                "discipline":"Discipline",
+                "baseGestion":"Base de gestion"
+              },
+             "detaille":
+              {
+                "2.5.4.4":"​Nom",
+                "2.5.6.1":"Prénom",
+                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements"
+
+             }
             },
-            "tableauAaf":{
-            "nom":"​Nom",
-            "prenom":"Prénom",
-            "birthday":"Date de naissance",
-            "identifiant":"Identifiant",
-            "etablissement":"Établissement",
-            "fonction":"Fonction",
-            "ville":"Ville",
-            "discipline":"Discipline",
-            "baseGestion":"Base de gestion"
-            },
+       
             "tableauAgora": {
-                "nom":"​Nom",
-                "prenom":"Prénom",
-                "birthday":"Date de naissance",
-                "position":"Position",
-                "libelle":"Libellé",
-                "infoComp":"Informations complementaires"
-            },
-            "tableauAnnuaireACA":{
+                "resume": 
+                {
+                "2.5.4.4":"​Nom",
+                "2.5.6.1":"Prénom",
+                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "position":"Position",
+                    "libelle":"Libellé",
+                    "infoComp":"Informations complementaires"
+                }
 
-            },
-            "tableauAnnuaireTouta":{
-            
-            },
-            "detail":"Détail"
-            
+            }
+      
         }
          
     }
