remplissage donne pour prez etat onglet ok

--- a/src/main/webapp/i18n/fr/representant.json
+++ b/src/main/webapp/i18n/fr/representant.json
@@ -1,6 +1,160 @@
 {
     "outilDiagnostic": {
         "representant": {
+            "ACA": {
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "2.25.b1196a4db489417ea343f425a5033060.9":"RNE établissement",
+                    "0.9.2342.19200300.100.1.1": "Identifiant",
+                    "0.9.2342.19200300.100.1.40":"Civilité",
+                    "2.5.4.12":"Titre",
+                    "2.5.4.42":"Prénom",
+                    "2.16.840.1.113730.3.1.241":"nom prenom",
+                    "2.5.4.0":"Profil organisationnel",
+                    "position":"Position",
+                    "libelle":"Libellé"
+    
+                },
+                "detaille":
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.5.4.3":"Nom commun",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                    "2.5.4.49":"Identifiant entrée",
+                    "2.16.840.1.113730.3.1.241":"nom prenom",
+                    "0.9.2342.19200300.100.1.40":"Civilité",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+                    "2.5.4.0":"Profil organisationnel",
+                    "2.5.4.12":"Titre",
+                    "2.5.4.42":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.7":"Source"
+
+               } 
+            },
+            "ATEN": {
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "0.9.2342.19200300.100.1.1": "Identifiant",
+                    "2.16.840.1.113730.3.1.241":"nom prenom",
+                    "position":"Position",
+                    "libelle":"Libellé",
+                    "2.5.4.0":"Profil organisationnel",
+                    "0.9.2342.19200300.100.1.40":"Civilité",
+                    "2.5.4.12":"Titre"
+
+                   
+    
+                },
+                "detaille":
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.5.4.3":"Nom commun",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                    "2.5.4.49":"Identifiant entrée",
+                    "2.16.840.1.113730.3.1.241":"nom prenom",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+                    "2.5.4.12":"Titre",
+                    "2.5.4.42":"Prénom",
+                    "2.5.4.0":"Profil organisationnel",
+                    "0.9.2342.19200300.100.1.40":"Civilité",
+                    "2.25.b1196a4db489417ea343f425a5033060.7":"Source"
+
+
+               } 
+            }
+        ,
+        "TOUTATICE": {
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "2.5.4.12":"Titre",
+                    "2.16.840.1.113730.3.1.241":"nom prenom",
+                    "position":"Position",
+                    "libelle":"Libellé",
+                    "infoComp":"Informations complementaires",
+                    "grade":"Grade",
+                    "numen":"Numen",
+                    "fonction":"Fonction"
+                },
+                "detaille":
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
+                    "2.5.4.3":"Nom commun",
+                    "2.5.4.49":"Identifiant entrée",
+                    "2.16.840.1.113730.3.1.241":"nom prenom",
+                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                    "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.5.4.12":"Titre",
+                    "2.25.b1196a4db489417ea343f425a5033060.7":"Source"
+
+    
+               }
+            
+           },
+        
+            
+           "tableauEppPrive":{
+             
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "position":"Position",
+                    "libelle":"Libellé",
+                    "infoComp":"Informations complementaires",
+                    "grade":"Grade",
+                    "numen":"Numen"
+                 },
+                 "detaille":
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements"
+    
+               }
+            },
             "tableauSiecle":{
               "nom": "Nom",
                "prenom":"Prénom",
