--- a/src/main/webapp/i18n/fr/eleve.json
+++ b/src/main/webapp/i18n/fr/eleve.json
@@ -1,23 +1,79 @@
 {
     "outilDiagnostic": {
         "eleve":{
-            "tableauSiecle":{
-               "nom":"Nom",
-               "prenom":"Prénom",
-               "identifiant":"Identifiant",
-               "birthday":"Date de naissance",
-               "etablissement":"Établissement",
-               "responsable":"Responsables Légaux"
+            "TOUTATICE":{
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "0.9.2342.19200300.100.1.1": "Identifiant",
+                    "0.0.0":"Responsables légales",
+                    "position":"Position",
+                    "libelle":"Libellé"
+    
+                },
+                "detaille":
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.5.4.3":"Nom commun",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                    "2.5.4.49":"Identifiant entrée",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+                    "2.5.4.12":"Titre",
+                    "0.9.2342.19200300.100.1.40":"Civilité",
+                    "2.16.840.1.113730.3.1.241":"Nom commun",
+                    "2.5.4.0": "Classe d'objet",
+                    "2.25.b1196a4db489417ea343f425a5033060.4":"RNE+TITle"
+
+               } 
            },
-           "tableauAaf":{
-           "nom": "Nom",
-           "prenom":"Prénom",
-           "identifiant":"Identifiant AAF",
-           "birthday":"Date de naissance",
-            "etablissement":"Établissement",
-            "classe":"Classe"
+           "AAF":{
+            "resume": 
+            {
+                "2.5.4.4":"​Nom",
+                "2.5.6.1":"Prénom",
+                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                "0.9.2342.19200300.100.1.1": "Identifiant",
+                "0.0.0":"Responsables légales",
+                "position":"Position",
+                "libelle":"Libellé"
 
            },
+           "detaille":
+           {
+               "2.5.4.4":"​Nom",
+               "2.5.6.1":"Prénom",
+               "2.5.4.3":"Nom commun",
+               "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+               "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+               "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+               "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+               "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+               "2.5.4.49":"Identifiant entrée",
+               "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+               "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+               "2.5.4.12":"Titre",
+               "0.9.2342.19200300.100.1.40":"Civilité",
+               "2.16.840.1.113730.3.1.241":"Nom commun",
+               "2.5.4.0": "Classe d'objet",
+               "2.25.b1196a4db489417ea343f425a5033060.4":"RNE+TITle"
+        }
+    },
            "tableauToutatice":{
             "nom":"Nom",
             "prenom":"Prénom",
@@ -34,20 +90,80 @@
             "etatCompte":"Etat du compte", 
             "lastCon":"Date dernière de connexion"
            },
-           "tableauAten":{
-            "nom":"Nom",
-            "prenom":"Prénom",
-            "identifiant":"identifiant",
-            "birthday":"Date de naissance",
-            "etablissement":"Établissement",
-            "responsable":"Responsables Légaux"
-           },
-           "detail":"Détail",
-           "typePersonne":"Type de personne",
-           "propriete":"Propriété",
-           "valeur":"Valeur(s)",
-           "retour":"Retour aux résultats de recherche"
+           "ATEN":{
+            
+                "resume": 
+                {
+                    "2.5.4.4":"​Nom",
+                    "2.5.6.1":"Prénom",
+                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                    "0.9.2342.19200300.100.1.1": "Identifiant",
+                    "0.0.0":"Responsables légales",
+                    "position":"Position",
+                    "libelle":"Libellé"
+    
+               },
+               "detaille":
+               {
+                   "2.5.4.4":"​Nom",
+                   "2.5.6.1":"Prénom",
+                   "2.5.4.3":"Nom commun",
+                   "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                   "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                   "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                   "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                   "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                   "2.5.4.49":"Identifiant entrée",
+                   "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                   "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+                   "2.5.4.12":"Titre",
+                   "0.9.2342.19200300.100.1.40":"Civilité",
+                   "2.16.840.1.113730.3.1.241":"Nom commun",
+                   "2.5.4.0": "Classe d'objet",
+                   "2.25.b1196a4db489417ea343f425a5033060.4":"RNE+TITle"
+            }
+        },
+        "SIECLE":{
+            
+            "resume": 
+            {
+                "2.5.4.4":"​Nom",
+                "2.5.6.1":"Prénom",
+                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                "0.9.2342.19200300.100.1.1": "Identifiant",
+                "0.0.0":"Responsables légales",
+                "position":"Position",
+                "libelle":"Libellé"
 
+           },
+           "detaille":
+           {
+               "2.5.4.4":"​Nom",
+               "2.5.6.1":"Prénom",
+               "2.5.4.3":"Nom commun",
+               "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+               "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+               "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+               "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+               "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+               "2.5.4.49":"Identifiant entrée",
+               "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+               "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+               "2.5.4.12":"Titre",
+               "0.9.2342.19200300.100.1.40":"Civilité",
+               "2.16.840.1.113730.3.1.241":"Nom commun",
+               "2.5.4.0": "Classe d'objet",
+               "2.25.b1196a4db489417ea343f425a5033060.4":"RNE+TITle"
+        }
+    }
 
         }
     }
