--- a/src/main/webapp/i18n/fr/personnel.json
+++ b/src/main/webapp/i18n/fr/personnel.json
@@ -8,8 +8,8 @@
                     "2.5.6.1":"Prénom",
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
-                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
                     "position":"Position",
@@ -24,10 +24,11 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.5.4.49":"Identifiant entrée",
-                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.5.4.0": "Classe d'objet",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
                     "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
                     "2.5.4.12":"Titre"
 
@@ -41,8 +42,8 @@
                     "2.5.6.1":"Prénom",
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
-                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "position":"Position",
@@ -61,18 +62,53 @@
                     "2.25.b1196a4db489417ea343f425a5033060.8":"Liste des établissements",
                     "2.5.4.3":"Nom commun",
                     "2.5.4.49":"Identifiant entrée",
+                    "2.5.4.0": "Classe d'objet",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
+                    "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
                     "2.5.4.12":"Titre"
 
     
                }
             
            },
-        
-            
+           "SIRHEN": {
+            "resume": 
+            {
+                "2.5.4.4":"​Nom",
+                "2.5.6.1":"Prénom",
+                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                "0.9.2342.19200300.100.1.1": "Identifiant",
+                "0.0.0":"Etablissement d'affectation",
+                "position":"Position",
+                "libelle":"Libellé"
+
+            },
+            "detaille":
+            {
+                "2.5.4.4":"​Nom",
+                "2.5.6.1":"Prénom",
+                "2.5.4.3":"Nom commun",
+                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
+                "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
+                "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                "0.9.2342.19200300.100.1.1": "Identifiant Unique",
+                "2.5.4.49":"Identifiant entrée",
+                "2.5.4.0": "Classe d'objet",
+                "0.0.0":"Etablissement d'affectation",
+                "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
+                "2.25.b1196a4db489417ea343f425a5033060.11":"Profil organisationnel",
+                "2.5.4.12":"Titre"
+
+           } 
+        }
+          ,  
            "tableauEppPrive":{
              
                 "resume": 
