--- a/src/main/webapp/i18n/fr/eleve.json
+++ b/src/main/webapp/i18n/fr/eleve.json
@@ -1,7 +1,7 @@
 {
     "outilDiagnostic": {
         "eleve":{
-            "TOUTATICE":{
+            "Annuaire TOUTATICE":{
                 "resume": 
                 {
                     "2.5.4.4":"​Nom",
@@ -9,7 +9,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
                     "0.0.0":"Responsables légales",
@@ -25,7 +25,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.5.4.49":"Identifiant entrée",
                     "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
@@ -34,7 +34,7 @@
                     "0.9.2342.19200300.100.1.40":"Civilité",
                     "2.16.840.1.113730.3.1.241":"Nom commun",
                     "2.5.4.0": "Classe d'objet",
-                    "2.25.b1196a4db489417ea343f425a5033060.4":"RNE+TITle"
+                    "2.25.b1196a4db489417ea343f425a5033060.4":"UAI+TITle"
 
                } 
            },
@@ -46,7 +46,7 @@
                 "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                 "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                 "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                 "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                 "0.9.2342.19200300.100.1.1": "Identifiant",
                 "0.0.0":"Responsables légales",
@@ -62,7 +62,7 @@
                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-               "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+               "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                "2.5.4.49":"Identifiant entrée",
                "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
@@ -71,7 +71,7 @@
                "0.9.2342.19200300.100.1.40":"Civilité",
                "2.16.840.1.113730.3.1.241":"Nom commun",
                "2.5.4.0": "Classe d'objet",
-               "2.25.b1196a4db489417ea343f425a5033060.4":"RNE+TITle"
+               "2.25.b1196a4db489417ea343f425a5033060.4":"UAI+TITle"
         }
     },
            "tableauToutatice":{
@@ -99,7 +99,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
                     "0.0.0":"Responsables légales",
@@ -115,7 +115,7 @@
                    "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                    "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                    "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                   "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                   "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                    "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                    "2.5.4.49":"Identifiant entrée",
                    "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
@@ -124,7 +124,7 @@
                    "0.9.2342.19200300.100.1.40":"Civilité",
                    "2.16.840.1.113730.3.1.241":"Nom commun",
                    "2.5.4.0": "Classe d'objet",
-                   "2.25.b1196a4db489417ea343f425a5033060.4":"RNE+TITle"
+                   "2.25.b1196a4db489417ea343f425a5033060.4":"UAI+TITle"
             }
         },
         "SIECLE":{
@@ -136,7 +136,7 @@
                 "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                 "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                 "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                 "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                 "0.9.2342.19200300.100.1.1": "Identifiant",
                 "0.0.0":"Responsables légales",
@@ -152,7 +152,7 @@
                "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-               "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+               "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                "2.5.4.49":"Identifiant entrée",
                "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
@@ -161,7 +161,7 @@
                "0.9.2342.19200300.100.1.40":"Civilité",
                "2.16.840.1.113730.3.1.241":"Nom commun",
                "2.5.4.0": "Classe d'objet",
-               "2.25.b1196a4db489417ea343f425a5033060.4":"RNE+TITle"
+               "2.25.b1196a4db489417ea343f425a5033060.4":"UAI+TITle"
         }
     }
 
