--- a/src/main/webapp/i18n/fr/personnel.json
+++ b/src/main/webapp/i18n/fr/personnel.json
@@ -1,7 +1,7 @@
 {
     "outilDiagnostic": {
         "personnel": {
-            "ACA": {
+            "Annuaire AAA": {
                 "resume": 
                 {
                     "2.5.4.4":"​Nom",
@@ -9,7 +9,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
                     "position":"Position",
@@ -24,7 +24,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.5.4.49":"Identifiant entrée",
                     "2.5.4.0": "Classe d'objet",
@@ -35,7 +35,7 @@
                } 
             }
         ,
-        "TOUTATICE": {
+        "Annuaire TOUTATICE": {
                 "resume": 
                 {
                     "2.5.4.4":"​Nom",
@@ -43,7 +43,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "position":"Position",
@@ -81,10 +81,10 @@
                 "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                 "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                 "2.25.b1196a4db489417ea343f425a5033060.10": "Fonction",
-                "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                 "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                 "0.9.2342.19200300.100.1.1": "Identifiant",
-                "0.0.0":"Etablissement d'affectation",
+                "0.0.0":"Affectation principal",
                 "position":"Position",
                 "libelle":"Libellé"
 
@@ -97,7 +97,7 @@
                 "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                 "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                 "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                 "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                 "2.5.4.49":"Identifiant entrée",
                 "2.5.4.0": "Classe d'objet",
