--- a/src/main/webapp/i18n/fr/representant.json
+++ b/src/main/webapp/i18n/fr/representant.json
@@ -1,7 +1,7 @@
 {
     "outilDiagnostic": {
         "representant": {
-            "ACA": {
+            "Annuaire AAA": {
                 "resume": 
                 {
                     "2.5.4.4":"​Nom",
@@ -9,9 +9,9 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                    "2.25.b1196a4db489417ea343f425a5033060.9":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.9":"UAI établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
                     "0.9.2342.19200300.100.1.40":"Civilité",
                     "2.5.4.12":"Titre",
@@ -30,7 +30,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.5.4.49":"Identifiant entrée",
                     "2.16.840.1.113730.3.1.241":"nom prenom",
@@ -52,7 +52,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
                     "2.16.840.1.113730.3.1.241":"nom prenom",
@@ -73,7 +73,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.5.4.49":"Identifiant entrée",
                     "2.16.840.1.113730.3.1.241":"nom prenom",
@@ -89,7 +89,7 @@
                } 
             }
         ,
-        "TOUTATICE": {
+        "Annuaire TOUTATICE": {
                 "resume": 
                 {
                     "2.5.4.4":"​Nom",
@@ -97,7 +97,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.5":"Date de naissance",
                     "0.9.2342.19200300.100.1.3":"Adresse de messagerie",
                     "2.25.b1196a4db489417ea343f425a5033060.10": "Code",
-                    "2.25.b1196a4db489417ea343f425a5033060.8":"RNE établissement",
+                    "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "0.9.2342.19200300.100.1.1": "Identifiant Unique",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "2.5.4.12":"Titre",
