donnée resentation ok

--- a/src/main/webapp/i18n/fr/eleve.json
+++ b/src/main/webapp/i18n/fr/eleve.json
@@ -12,7 +12,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
-                    "0.0.0":"Responsables légales",
+                    "0.0.0":"Responsables légaux",
                     "position":"Position",
                     "libelle":"Libellé"
     
@@ -49,7 +49,7 @@
                 "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                 "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                 "0.9.2342.19200300.100.1.1": "Identifiant",
-                "0.0.0":"Responsables légales",
+                "0.0.0":"Responsables légaux",
                 "position":"Position",
                 "libelle":"Libellé"
 
@@ -102,7 +102,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
-                    "0.0.0":"Responsables légales",
+                    "0.0.0":"Responsables légaux",
                     "position":"Position",
                     "libelle":"Libellé"
     
@@ -139,7 +139,7 @@
                 "2.25.b1196a4db489417ea343f425a5033060.8":"UAI établissement",
                 "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                 "0.9.2342.19200300.100.1.1": "Identifiant",
-                "0.0.0":"Responsables légales",
+                "0.0.0":"Responsables légaux",
                 "position":"Position",
                 "libelle":"Libellé"
 
