--- a/src/main/webapp/i18n/fr/representant.json
+++ b/src/main/webapp/i18n/fr/representant.json
@@ -56,6 +56,7 @@
                     "2.25.b1196a4db489417ea343f425a5033060.6":"Profil national",
                     "0.9.2342.19200300.100.1.1": "Identifiant",
                     "2.16.840.1.113730.3.1.241":"nom prenom",
+                    "0.0.0":"Enfant(s)",
                     "position":"Position",
                     "libelle":"Libellé",
                     "2.5.4.0":"Profil organisationnel",
